# pmesh

./: .gitignore  .travis.yml  README.rst  check_tag.sh  pyproject.toml  renovate.yaml  setup.py
.github/workflows/: python-package-conda.yml  tests.yml
docs/: install.rst
examples/: klein-gordon.py
pmesh/: abopt.py
pmesh/tests/: test_abopt.py
