[build-system]
requires = ["setuptools>=64", "wheel", "numpy>=1.25", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pmesh"
version = "0.1.56"
description = "Particle Mesh in Python"
readme = "README.rst"
authors = [{name = "Yu Feng"}]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "cython>=0.29",
    "numpy>=1.25",
    "mpi4py>=3.1.0",
    "mpsort>=0.1.0",
    "pfft-python>=0.1.0",
]

[project.optional-dependencies]
full = ["abopt"]
abopt = ["abopt"]

[project.urls]
Homepage = "http://rainwoodman.github.io/pmesh"
Documentation = "http://rainwoodman.github.io/pmesh"
Repository = "https://github.com/rainwoodman/pmesh"
"Bug Tracker" = "https://github.com/rainwoodman/pmesh/issues"

[tool.setuptools]
packages = ["pmesh", "pmesh.tests"]

[tool.setuptools.package-dir]
pmesh = "pmesh"

[tool.setuptools.package-data]
pmesh = [
    "*.pyx",
    "*.h",
    "*.c",
    "gsl/*.h",
    "gsl/*.c",
]

# Equivalent to MANIFEST.in - ensures source files are included in sdist
[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__"]
